2008-04-11  Bastien Nocera  <hadess@hadess.net>

	* telepathy/main.c: Add an include for locale.h, spotted by
	Baptiste Mille-Mathias <bmm80@free.fr> (Closes: #527410)

============ Version 0.51

2008-03-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.51
	* libgsm/phonemgr-listener.c (phonemgr_listener_get_own_details):
	Abort straight away if we can't change to the ON address book
	folder
	* libgsm/glibgsmtest.c (send_message), (main):
	Send a message after a little timeout, to avoid behaving differently
	from gnome-phone-manager

2008-03-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_sms_notification_soft_poll):
	Spin less, fix some ms/microseconds confusion

2008-03-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_address_is):
	Fix utter stupidness checking whether an address is
	actually a device path

2008-03-13  Bastien Nocera  <hadess@hadess.net>

	* README: update build dependencies
	* configure.in:
	* src/ui.c (create_send_dialog): Add spell checking
	to the "Send message" text area, based on patch by
	Daniel Schierbeck <daniel.schierbeck@gmail.com>
	(Closes: #508816)

============ Version 0.50

2008-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.50
	* data/Makefile.am: Fix distcheck

2008-03-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (find_service_channel):
	Don't use the public browse group to look for the Serial/DUN
	channel (Closes: #511220)

2008-03-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/Makefile.am:
	* libgsm/test-sdp-search.c (main): Add a test program for
	finding out the serial channel on a remote device

2008-03-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_get_serial_channel),
	(phonemgr_utils_get_gnapplet_channel): Add debug for which
	channel ends up being selected

2008-03-07  Bastien Nocera  <hadess@hadess.net>
